2010-02-07 03:37-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h: Remove HOTKEY method.
	* Source/win32/w32_general.m: Remove HOTKEY method.
	* Source/win32/WIN32Server.m: Remove call to HOTKEY method.  Added
	function "mask_for_keystate(..)" to implement modifier mappings
	on Windows.   Also changed process_key_event to use the new function
	and changed the call to ToUnicode to use a blank array instead of
	modifying the existing keyState array since this was returning the
	characters with the modifiers still applied.

2010-02-05 16:31-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/win32/WIN32Server.h: Added declaration for decodeWM_HOTKEY:...
	* Source/win32/WIN32Server.m: Added call to method decodeWM_HOTKEY:...
	* Source/win32/w32_general.m: Added method decodeWM_HOTKEY:...

2010-01-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/w32_text_focus.m: Re-enable the focus in event.
	* Source\win32\WIN32Server.m (-movewindow::, -placewindow::): Use
	the SWP_NOACTIVATE flag to pervent window activation.
	* Source\win32\WIN32Server.m (-setinputstate::): Set active on
	main not key.

2010-01-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
	Merge the two checks for xshm.
	* Source/art/ftfont.m (-initWithFontName:...screenFont:):
	Initialize unicodeCmap to -1 to be able to detect missing unicode
	encoding in a font.

2010-01-25 04:13-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/win32/w32_create.m: (-decodeWM_CREATEParams:::) add
	code to load and set the HICON into the window.  Currently, 
	an .ico file with the same name as the image specified in 
	NSIcon or CFBundleIconName needs to be provided in the 
	resources.  

2010-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:)
	(test_xshm): Don't give up on xshm when pixmaps aren't supported.